Tue Dec  9 02:33:46 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/idl2jni/runtime/i2jrt/Runtime.java:
        * java/idl2jni/runtime/i2jrt_Runtime.cpp:
        * java/idl2jni/runtime/idl2jni_runtime.h:
        * java/idl2jni/runtime/idl2jni_runtime.cpp:
        * java/idl2jni/runtime/idl2jni_runtime.mpc:
        * java/jms/src/org/opendds/jms/resource/ResourceAdapterImpl.java:

          Initial support for context class loading in attached native
          threads.

Tue Dec  9 00:14:16 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/INSTALL:

          Updated INSTALL with instructions for building on Mac OS X.

Mon Dec  8 19:28:27 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepo.mpc:

          Dropped static dependency on imr_client. (This should cause a
          temporary failure on 1.4a builds (Ciju is working on a patch).

        * java/ant/opendds-ant.iml:
        * java/jms/compat/opendds-jms-compat.iml:
        * java/jms/src/org/opendds/jms/management/DCPSInfoRepoService.java:
        * java/jms/src/org/opendds/jms/management/Destination.java:
        * java/jms/src/org/opendds/jms/management/HibernatePersistenceService.java:
        * java/jms/src/org/opendds/jms/management/ParticipantFactoryService.java:
        * java/jms/src/org/opendds/jms/management/argument/DynamicArguments.java:

          Updates to JMX components: better logging; general refactoring.

Sun Dec  7 22:35:41 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Comparator_T.h:

          Added an #include needed for TAO 1.4a on some platforms.

        * dds/DCPS/FileSystemStorage.h:

          Fixed a typo in my commit from yesterday.

Sun Dec  7 05:47:46 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/ant/opendds-ant.iml:
        * java/jms/compat/opendds-jms-compat.iml:
        * java/jms/compat/src/META-INF/application.xml: