@@ -11,10 +11,10 @@ Java_i2jrt_Runtime_setClassLoader (JNIEnv *env, jclass clazz, jobject cl)
   jobject old;
 
   // Delete GlobalRef if exists
-  old = JNIThreadAttacher::getClassLoader();
+  old = JNIThreadAttacher::getClassLoader ();
   if (old != 0)
     {
-      env->DeleteGlobalRef(old); 
+      env->DeleteGlobalRef (old); 
     }
-  JNIThreadAttacher::setClassLoader(env->NewGlobalRef(cl));
+  JNIThreadAttacher::setClassLoader (env->NewGlobalRef (cl));
 }
